--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
-    "concurrently": "^4.1.0",
+    "concurrently": "^7.6.0",
     "express": "^4.16.4",
-    "jsonwebtoken": "^8.4.0",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^5.4.4",
-    "multer": "^1.4.1",
-    "passport": "^0.4.0",
+    "multer": "^1.4.5-lts.1",
+    "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
-    "validator": "^10.10.0"
+    "validator": "^13.7.0"
   }
 }
